# hid-remapper

./: .gitignore  BLUETOOTH.md  build_log.txt  code.js  usages.js
.github/workflows/: build-nrf52.yml  build-rp2040.yml  release.yml
config-tool/: common.py  get_config.py  set_config.py
config-tool-web/: code.js  examples.js  index.html  nus-tester.js  usages.js
firmware/: CMakeLists.txt  remapper_single.ld  remapper_single_rp2350.ld
firmware-ble-peripheral/: CMakeLists.txt  prj.conf
firmware-ble-peripheral/boards/arm/holyiot_22046/: Kconfig  Kconfig.board  Kconfig.defconfig  holyiot_22046-pinctrl.dtsi  holyiot_22046.dts  holyiot_22046.yaml  holyiot_22046_defconfig  pre_dt_board.cmake
firmware-ble-peripheral/src/: descriptors.cc  descriptors.h  main.cc
firmware-bluetooth/: CMakeLists.txt  prj.conf  usb_composite.overlay
firmware-bluetooth/boards/arm/adafruit_itsybitsy_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  README.md  adafruit_itsybitsy_nrf52840-pinctrl.dtsi  adafruit_itsybitsy_nrf52840.dts  adafruit_itsybitsy_nrf52840.yaml  adafruit_itsybitsy_nrf52840_defconfig  board.cmake  pre_dt_board.cmake
firmware-bluetooth/boards/arm/seeed_xiao_nrf52840/: Kconfig  seeed_xiao_nrf52840-pinctrl.dtsi  seeed_xiao_nrf52840.dts  seeed_xiao_nrf52840_defconfig  seeed_xiao_nrf52840_sense.overlay
firmware-bluetooth/scripts/: cdc_hid_send.py
firmware-bluetooth/src/: accel_descriptor.h  ble_hids.cc  ble_hids.h  ble_hids_obj.c  imu.cc  imu.h  imu_descriptor.h  joycon2.cc  joycon2.h  main.cc  nus_service.cc  nus_service.h  pdm.cc  pdm.h  pdm_README.md  pdm_descriptor.h  slip_input.cc  slip_input.h  usb_cdc_input.cc  usb_cdc_input.h  usb_midi.cc  usb_midi.h  virtual_input.h
firmware/src/: ble_button_led.cc  ble_button_led.h  ble_central.cc  ble_central.h  ble_nus.cc  ble_nus.h  ble_remapper.gatt  ble_shared.cc  ble_shared.h  btstack_config.h  config.cc  flash_layout.h  globals.cc  globals.h  main.cc  our_descriptor.cc  quirks.cc  remapper.cc  remapper_bluetooth.cc  tinyusb_stuff.cc  types.h
firmware/src/boards/: meisterconverter.h  rp2040abb.h
transmitter-ble-web/: code.js  index.html  serve.mjs
